Add uplmn setting for USIM
Add preference "preferred network" in settings for USIM.
Add two activities for user to search and edit plmn.

Change-Id: Iaab46cd26f6c0e75439dc56409ddbc8e5ef57dff

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -631,5 +631,20 @@
                 <action android:name="android.content.action.SEARCH_INDEXABLES_PROVIDER" />
             </intent-filter>
         </provider>
+
+        <activity android:name="UserPLMNListPreference"
+            android:configChanges="orientation|screenSize|keyboardHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="UPLMNEditor"
+            android:configChanges="orientation|screenSize|keyboardHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
     </application>
 </manifest>
