--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -146,6 +146,24 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="ContactScreenActivity"
+            android:label="@string/contactScreen">
+            <intent-filter >
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="ExportContactsToSim"
+            android:label="@string/exportContactScreen">
+            <intent-filter >
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name="FdnList"
                 android:label="@string/fdnListLabel"
                 android:theme="@style/DialerSettingsLight">
