Remove the 4G/3G SIM card option for non-CMCC card.
Remove the 4G/3G SIM card option in multi-sim settings
if SIM cards inserted the device should not be setable.

Enhance some logics for primary sub settings.

CRs-Fixed: 737178

Change-Id: I345d222b4fe6777cf3ab80c132bf434e45b419b7

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -496,7 +496,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <action android:name="com.android.phone.LTE_CONFIGURE" />
+                <action android:name="codeaurora.intent.action.ACTION_LTE_CONFIGURE" />
             </intent-filter>
         </activity>
 
