Telephony: theme MultiSim Mobile Settings to match Settings app
Change-Id: I1037f4f32f903dbe872dc40f780aa1a82132b67a
Signed-off-by: Roman Birg <roman@cyngn.com>

Conflicts:
	AndroidManifest.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -463,11 +463,11 @@
             </intent-filter>
         </activity>
 
-        <!-- Select Subscription -->
+        <!-- Select Subscription. Theme is set in the Activity. -->
         <activity android:name=".msim.SelectSubscription"
             android:label="@string/callind_multi_sim"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@style/SettingsLight">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
